@@ -19,7 +19,13 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
+#include <Rcpp/RObject.h>
 #include <Rcpp/Environment.h>
+#include <Rcpp/Evaluator.h>
+#include <Rcpp/exceptions.h>
+
+#include <R_ext/Callbacks.h>
+#include <Rcpp/cache.h>
 
 namespace Rcpp {
 
